--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #b0b0ba;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #fcfdff;
 }
 
 body {
